--- a/more-secure/css/style-sheet.css
+++ b/more-secure/css/style-sheet.css
@@ -25,6 +25,10 @@ input{
     margin-left: 10px;
 }
 
+label{
+    margin-right: 10px;
+}
+
 #loginMessage, #lockoutMessage{
     font-weight: bold;
     text-align: center;
@@ -32,10 +36,20 @@ input{
     padding: 10px;
 }
 
-#mainContent{
+#mainContent, #tableContainer{
+    margin-top: 5px;
+    margin-bottom: 30px;
     background-color: burlywood;
     border: 10px burlywood solid;
     border-radius: 10px;
     box-shadow: 2px 2px 10px black;
 }
+
+td,th{
+    background-color: antiquewhite;
+    border: 2px solid black;
+    padding: 5px;
+}
+
+
 
